--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,9 @@ edition = "2024"
 
 [dependencies]
 futures-util = "0.3.31"
+rand = "0.9"
+serde_json = "1.0.140"
 tokio = { version = "1.44.2", features = ["full"] }
 tokio-tungstenite = "0.26.2"
+plume_core = { git = "https://github.com/AmourDev77/plume_core.git" }
+dotenv = "0.15.0"
