--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ rand = "0.9"
 serde_json = "1.0.140"
 tokio = { version = "1.44.2", features = ["full"] }
 tokio-tungstenite = "0.26.2"
-plume_core = { git = "https://github.com/AmourDev77/plume_core.git" }
+# plume_core = { git = "https://github.com/AmourDev77/plume_core.git" }
+plume_core = { path = "../plume_core" }
 dotenv = "0.15.0"
